apps/argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  ingressClassName: cilium
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-letsencrypt-staging"
    ingress.cilium.io/force-https: "true"
spec:
  syncPolicy:
    automated:
      prune: true
      selfHeal: true
    retry:
      limit: 5 # Number of failed sync attempts to retry
      backoff:
        duration: 20s # Initial backoff duration
        factor: 2 # Factor to multiply the base duration
        maxDuration: 3m0s # Maximum backoff duration

  tls:
    - hosts:
        - argocd.home.solazs.hu
      secretName: argocd-server-tls
  rules:
    - host: argocd.home.solazs.hu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  # Cilium 1.18 will see the 'http' port in the service
                  # and know to talk to the backend without encryption.
                  name: http
