apps/frigate.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate-route
  namespace: frigate
spec:
  parentRefs:
    - name: home-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "frigate.home.solazs.hu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frigate
          port: 5000
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: frigate-rtsp-route
  namespace: frigate
spec:
  parentRefs:
    - name: home-gateway
      namespace: envoy-gateway-system
      sectionName: rtsp-listener # Must match the listener name in your Gateway
  rules:
    - backendRefs:
        - name: frigate
          port: 8554
